BUG 2133: Sharing pane not showing for viewers/contributors * Made a few different tiers of the pane.   Non-owners can see the pane as long as it's shared with them, but can't   change existing permissions or add new shares.
QA: Re-test

--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -475,12 +475,13 @@
         margin-top: 1em
 
         &.inherited
-          .removeShareLink
-            visibility: hidden
           .selector
             display: none
           .name
             width: 16em
+        &.inherited, &.noGrant
+          .removeShareLink
+            visibility: hidden
 
         .name
           @include clip-text
@@ -488,6 +489,9 @@
           font-size: 1.2em
           margin-right: 0.5em
           width: 8em
+
+        span.type
+          font-size: 1.2em
 
         .profileImage
           background-image: url(/images/small-profile.png)
@@ -507,7 +511,7 @@
           .ie8 &
             margin-top: -1.5em
 
-        select.type
+        .type
           width: 10em
 
   #gridSidebar_guidedFilter
